New urls for PonyV6

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -121,9 +121,9 @@
         "  model_url = optional_custom_training_model_url\n",
         "elif \"Pony\" in training_model:\n",
         "  if load_diffusers:\n",
-        "    model_url = \"https://huggingface.co/hollowstrawberry/67AB2F\"\n",
+        "    model_url = \"https://huggingface.co/WhiteAiZ/Pony_diffusion_v6_diffusers_fp16\"\n",
         "  else:\n",
-        "    model_url = \"https://civitai.com/api/download/models/290640\"\n",
+        "    model_url = \"https://huggingface.co/WhiteAiZ/PonyXL/resolve/main/PonyDiffusionV6XL.safetensors\"\n",
         "  model_file = \"/content/ponyDiffusionV6XL.safetensors\"\n",
         "elif \"Animagine\" in training_model:\n",
         "  if load_diffusers:\n",
@@ -227,7 +227,7 @@
         "cache_text_encoder_outputs  = False  # @param {type:\"boolean\"}\n",
         "\n",
         "#@markdown ### ▶️ Advanced\n",
-        "#@markdown El optimizador es el algoritmo utilizado para el entrenamiento. AdanW8Bit es el predeterminado y funciona muy bien, mientras que Prodigy administra la tasa de aprendizaje automáticamente y puede tener varias ventajas, como entrenar más rápido debido a que necesita menos pasos, así como trabajar mejor para conjuntos de datos pequeños.\n",
+        "#@markdown El optimizador es el algoritmo utilizado para el entrenamiento. AdaFactor es el predeterminado y funciona muy bien, mientras que Prodigy administra la tasa de aprendizaje automáticamente y puede tener varias ventajas, como entrenar más rápido debido a que necesita menos pasos, así como trabajar mejor para conjuntos de datos pequeños.\n",
         "optimizer = \"AdaFactor\" #@param [\"AdamW8bit\", \"Prodigy\", \"DAdaptation\", \"DadaptAdam\", \"DadaptLion\", \"AdamW\", \"Lion\", \"SGDNesterov\", \"SGDNesterov8bit\", \"AdaFactor\"]\n",
         "#@markdown Argumentos recomendados para AdamW8bit: `weight_decay=0.1 betas=[0.9,0.99]`<p>\n",
         "#@markdown Argumentos recomendados para Prodigy: `decouple=True weight_decay=0.01 betas=[0.9,0.999] d_coef=2 use_bias_correction=True safeguard_warmup=True`<p>\n",
