--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -110,7 +110,7 @@
         "#@markdown La estructura de carpetas no importa y es puramente por comodidad. Asegúrate de elegir siempre el mismo.  Me gusta organizar por proyecto.\n",
         "folder_structure = \"Organize by project (MyDrive/Loras/project_name/dataset)\" #@param [\"Organize by category (MyDrive/lora_training/datasets/project_name)\", \"Organize by project (MyDrive/Loras/project_name/dataset)\"]\n",
         "#@markdown Decida el modelo que se descargará y utilizará para el entrenamiento. También puedes elegir tu propio modelo pegando su enlace de descarga o un archivo en tu Google Drive que comience con `/content/drive/MyDrive`.\n",
-        "training_model = \"Pony Diffusion V6 XL\" #@param [\"Pony Diffusion V6 XL\", \"Animagine XL V3\", \"Stable Diffusion XL 1.0 base\"]\n",
+        "training_model = \"Pony_Realism\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"Stable Diffusion XL 1.0 base\",\"Pony_Realism\"]\n",
         "optional_custom_training_model_url = \"\" #@param {type:\"string\"}\n",
         "#@markdown El uso de un modelo en diffusers utiliza menos recursos. Las 3 opciones anteriores funcionarán con o sin diffusers.\n",
         "load_diffusers = True #@param {type:\"boolean\"}\n",
@@ -136,9 +136,14 @@
         "    model_url = \"https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/\"\n",
         "  else:\n",
         "    model_url = \"https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/resolve/main/sd_xl_base_1.0.safetensors\"\n",
+        "if load_diffusers:\n",
+        "    model_url = \"https://huggingface.co/stablediffusionapi/pony-realism/\"\n",
+        "else:\n",
+        "    model_url = \"https://huggingface.co/LyliaEngine/ponyRealism_v21MainVAE/resolve/main/ponyRealism_v21MainVAE.safetensors\"\n",
+        "    model_file = \"/content/ponyrealism.safetensors/\"\n",
         "\n",
         "if load_diffusers:\n",
-        "  vae_file= \"stabilityai/sdxl-vae\"\n",
+        "   vae_file= \"stabilityai/sdxl-vae\"\n",
         "else:\n",
         "  vae_url = \"https://huggingface.co/stabilityai/sdxl-vae/resolve/main/sdxl_vae.safetensors\"\n",
         "  vae_file = \"/content/sdxl_vae.safetensors\"\n",
