fixed models url

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -63,11 +63,11 @@
       "metadata": {
         "cellView": "form",
         "id": "AT1WRbhiHRCJ",
-        "outputId": "852d2355-249d-4b5d-f5d2-492db6f97ed6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 356
-        }
+        },
+        "outputId": "852d2355-249d-4b5d-f5d2-492db6f97ed6"
       },
       "outputs": [
         {
@@ -134,7 +134,7 @@
         "\n",
         "#@markdown ### ▶️ Setup\n",
         "#@markdown El nombre de tu proyecto será el mismo que el de la carpeta que contiene tus imágenes. No se permiten espacios, puedes usar `guión bajo` si el nombre es muy largo.\n",
-        "project_name = \"Gally\" #@param {type:\"string\"}\n",
+        "project_name = \"\" #@param {type:\"string\"}\n",
         "project_name = project_name.strip()\n",
         "#@markdown La estructura de carpetas no importa y es puramente por comodidad. Asegúrate de elegir siempre el mismo.  Me gusta organizar por proyecto.\n",
         "folder_structure = \"Organize by project (MyDrive/Loras/project_name/dataset)\" #@param [\"Organize by category (MyDrive/lora_training/datasets/project_name)\", \"Organize by project (MyDrive/Loras/project_name/dataset)\"]\n",
