fixed dependencies fixed sdpa

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -16,7 +16,7 @@
         "id": "omCLgUOB2_ZF"
       },
       "source": [
-        "# 🌟 XL Lora Trainer by Hollowstrawberry\n",
+        "# 🌟 XL Lora Trainer\n",
         "\n",
         "❗ **Se recomienda Colab Premium.** Lo ideal sería cambiar el tiempo de ejecución a una A100 y utilizar el tamaño máximo de lote.  \n",
         "Sin embargo, aún se puede entrenar de forma gratuita si carga un modelo de diffusers, solo que tomará mucho más tiempo.  \n",
@@ -24,13 +24,6 @@
         "\n",
         "This colab is based on the work of [Kohya-ss](https://github.com/kohya-ss/sd-scripts) and [Linaqruf](https://github.com/Linaqruf/kohya-trainer). Thank you!"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "jsO070Ji621K"
-      }
     },
     {
       "cell_type": "markdown",
@@ -52,8 +45,6 @@
         "| |GitHub|🇬🇧 English|🇪🇸 Spanish|\n",
         "|:--|:-:|:-:|:-:|\n",
         "| 🏠 **Homepage** | [![GitHub](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/github.svg)](https://github.com/hollowstrawberry/kohya-colab) | | |\n",
-        "| 📊 **Dataset Maker** | [![GitHub](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/github.svg)](https://github.com/hollowstrawberry/kohya-colab/blob/main/Dataset_Maker.ipynb) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/hollowstrawberry/kohya-colab/blob/main/Dataset_Maker.ipynb) | [![Abrir en Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge-spanish.svg)](https://colab.research.google.com/github/hollowstrawberry/kohya-colab/blob/main/Spanish_Dataset_Maker.ipynb) |\n",
-        "| ⭐ **Lora Trainer** | [![GitHub](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/github.svg)](https://github.com/hollowstrawberry/kohya-colab/blob/main/Lora_Trainer.ipynb) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/hollowstrawberry/kohya-colab/blob/main/Lora_Trainer.ipynb) | [![Abrir en Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge-spanish.svg)](https://colab.research.google.com/github/hollowstrawberry/kohya-colab/blob/main/Spanish_Lora_Trainer.ipynb) |\n",
         "| 🌟 **XL Lora Trainer** | [![GitHub](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/github.svg)](https://github.com/hollowstrawberry/kohya-colab/blob/main/Lora_Trainer_XL.ipynb) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/hollowstrawberry/kohya-colab/blob/main/Lora_Trainer_XL.ipynb) | [![Abrir en Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge-spanish.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Fix_Lora_Trainer_XL.ipynb) |"
       ]
     },
@@ -305,9 +296,11 @@
         "\n",
         "  !apt -y update -qq\n",
         "  !apt -y install aria2 -qq\n",
-        "  !pip install torch==2.4.1+cu121 accelerate==0.19.0 transformers==4.30.2 diffusers==0.18.2 bitsandbytes==0.40.0.post4 opencv-python jax==0.4.23 jaxlib==0.4.23\n",
-        "  !pip install pytorch-lightning==1.9.0 voluptuous==0.13.1 toml==0.10.2 ftfy==6.1.1 einops==0.6.0 safetensors pygments\n",
-        "  !pip install huggingface-hub invisible-watermark==0.2.0 open-clip-torch==2.20.0 dadaptation==3.1 prodigyopt==1.0 lion-pytorch==0.1.2 wandb\n",
+        "  !pip install torch==2.4.1+cu121 accelerate==0.19.0 transformers==4.30.2 diffusers==0.18.2 \\\n",
+        "    bitsandbytes==0.40.0.post4 opencv-python==4.7.0.68 jax==0.4.23 jaxlib==0.4.23 \\\n",
+        "    pytorch-lightning==1.9.0 voluptuous==0.13.1 toml==0.10.2 ftfy==6.1.1 einops==0.6.0 \\\n",
+        "    safetensors pygments huggingface-hub wandb invisible-watermark==0.2.0 open-clip-torch==2.20.0 \\\n",
+        "    dadaptation==3.1 prodigyopt==1.0 lion-pytorch==0.1.2\n",
         "  !pip install -e .\n",
         "  if cross_attention == \"xformers\":\n",
         "    !pip install -q xformers\n",
@@ -692,6 +685,22 @@
         "Puede convertir uno de ellos en una carpeta de regularización agregando `is_reg = true`  \n",
         "También puede establecer diferentes `keep_tokens`, `flip_aug`, etc."
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@markdown Conectarse a Google Drive. Algunas de las opciones de abajo necesitan conexión a Google Drive,\n",
+        "#@markdown conectate aquí.\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "print(\"Conexión establecida a Drive Exitosa!\")"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "23_YDYGhEnK0"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
