--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -297,7 +297,7 @@
         "  !apt -y update -qq\n",
         "  !apt -y install aria2 -qq\n",
         "  !pip install torch==2.4.1+cu121 accelerate==0.19.0 transformers==4.30.2 diffusers==0.18.2 \\\n",
-        "    bitsandbytes==0.40.0.post4 opencv-python==4.7.0.68 jax==0.4.23 jaxlib==0.4.23 \\\n",
+        "    bitsandbytes==0.40.0.post4 opencv-python jax==0.4.23 jaxlib==0.4.23 \\\n",
         "    pytorch-lightning==1.9.0 voluptuous==0.13.1 toml==0.10.2 ftfy==6.1.1 einops==0.6.0 \\\n",
         "    safetensors pygments huggingface-hub wandb invisible-watermark==0.2.0 open-clip-torch==2.20.0 \\\n",
         "    dadaptation==3.1 prodigyopt==1.0 lion-pytorch==0.1.2\n",
@@ -672,21 +672,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ODpo0kcX3KRy"
-      },
-      "source": [
-        "### 📚 Varias carpetas en el mismo conjunto de datos\n",
-        "A continuación se muestra una plantilla que le permite definir varias carpetas en su conjunto de datos. Debe incluir la ubicación de cada carpeta y puede establecer un número diferente de repeticiones para cada una. Para agregar más carpetas, simplemente copie y pegue las secciones que comienzan con `[[datasets.subsets]]`.\n",
-        "\n",
-        "Al habilitar esto, se ignorará el número de repeticiones establecidas en la celda principal y también se ignorará la carpeta principal establecida por el nombre del proyecto.\n",
-        "\n",
-        "Puede convertir uno de ellos en una carpeta de regularización agregando `is_reg = true`  \n",
-        "También puede establecer diferentes `keep_tokens`, `flip_aug`, etc."
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "#@markdown Conectarse a Google Drive. Algunas de las opciones de abajo necesitan conexión a Google Drive,\n",
@@ -701,6 +686,21 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ODpo0kcX3KRy"
+      },
+      "source": [
+        "### 📚 Varias carpetas en el mismo conjunto de datos\n",
+        "A continuación se muestra una plantilla que le permite definir varias carpetas en su conjunto de datos. Debe incluir la ubicación de cada carpeta y puede establecer un número diferente de repeticiones para cada una. Para agregar más carpetas, simplemente copie y pegue las secciones que comienzan con `[[datasets.subsets]]`.\n",
+        "\n",
+        "Al habilitar esto, se ignorará el número de repeticiones establecidas en la celda principal y también se ignorará la carpeta principal establecida por el nombre del proyecto.\n",
+        "\n",
+        "Puede convertir uno de ellos en una carpeta de regularización agregando `is_reg = true`  \n",
+        "También puede establecer diferentes `keep_tokens`, `flip_aug`, etc."
+      ]
     },
     {
       "cell_type": "code",
