Fix opencv python

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -674,7 +674,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown Conectarse a Google Drive. Algunas de las opciones de abajo necesitan conexión a Google Drive,\n",
+        "#@markdown Conectarse a Google Drive 📁. Algunas de las opciones de abajo necesitan conexión a Google Drive,\n",
         "#@markdown conectate aquí.\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
