added “flip_aug” option in the trainer

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -144,6 +144,8 @@
         "#@markdown ### ▶️ Processing\n",
         "#@markdown Por defecto la resolución para personajes es 1024, para estilos tambien puedes usar 768 o dejarlo en 1024.\n",
         "resolution = 1024 #@param {type:\"number\", min:768, max:1536, step:128}\n",
+        "#@markdown Activa `Flip Aug`si tu dataset es pequeño, util en personajes isometricos, volteara todas tus imagenes (modo espejo) para aprender el doble, pero podria afectar a personajes con tatuajes, marcas, cicatrices etc...\n",
+        "flip_aug = False #@param {type:\"boolean\"}\n",
         "caption_extension = \".txt\" # @param [\".txt\",\".caption\"]\n",
         "#@markdown Mezcla etiquetas de anime, mejora el aprendizaje y las indicaciones.  Una etiqueta de activación va al comienzo de cada archivo de texto y no se mezclará.<p>\n",
         "shuffle_tags = True #@param {type:\"boolean\"}\n",
@@ -489,7 +491,7 @@
         "        \"resolution\": resolution,\n",
         "        \"shuffle_caption\": shuffle_caption and not cache_text_encoder_outputs,\n",
         "        \"keep_tokens\": keep_tokens,\n",
-        "        \"flip_aug\": False,\n",
+        "        \"flip_aug\": flip_aug,\n",
         "        \"caption_extension\": caption_extension,\n",
         "        \"enable_bucket\": True,\n",
         "        \"bucket_no_upscale\": False,\n",
