Fix analyze tags

--- a/Waifu_Diffusion_V3_Dataser_Maker.ipynb
+++ b/Waifu_Diffusion_V3_Dataser_Maker.ipynb
@@ -339,17 +339,17 @@
     {
       "cell_type": "code",
       "source": [
-        "`#@markdown ### Analyze Tags 📝\n",
+        "#@markdown ### Analyze Tags 📝\n",
         "#@markdown Perhaps you need another look at your dataset.\n",
         "#@markdown **You can see the tags of various folders like this:** `my_lora/dataset/subfolder`\n",
         "from collections import Counter\n",
         "import os\n",
         "\n",
         "# Define the project path\n",
-        "proyect_name = \"\"  #@param {type:\"string\"}\n",
+        "proyect_dir = \"/content/drive/MyDrive/Loras/My_proyect/dataset\"  #@param {type:\"string\"}\n",
         "\n",
         "# Defines the path of the dataset\n",
-        "dataset_folder = f\"/content/drive/MyDrive/Loras/{proyect_name}/\"\n",
+        "dataset_folder = f\"{proyect_dir}/\"\n",
         "\n",
         "show_top_tags = 50 #@param {type:\"number\"}\n",
         "\n",
