--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -101,7 +101,7 @@
         "#@markdown La estructura de carpetas no importa y es puramente por comodidad. Asegúrate de elegir siempre el mismo.  Me gusta organizar por proyecto.\n",
         "folder_structure = \"Organize by project (MyDrive/Loras/project_name/dataset)\" #@param [\"Organize by category (MyDrive/lora_training/datasets/project_name)\", \"Organize by project (MyDrive/Loras/project_name/dataset)\"]\n",
         "#@markdown Decida el modelo que se descargará y utilizará para el entrenamiento. También puedes elegir tu propio modelo pegando su enlace de descarga o un archivo en tu Google Drive que comience con `/content/drive/MyDrive`.\n",
-        "training_model = \"Pony Diffusion V6 XL\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"Stable Diffusion XL 1.0 base\",\"Pony_Realism\"]\n",
+        "training_model = \"Pony Diffusion V6 XL\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\", \"Illustrious\", \"NoobAI-XL\", \"Stable Diffusion XL 1.0 base\",\"Pony_Realism\"]\n",
         "optional_custom_training_model_url = \"\" #@param {type:\"string\"}\n",
         "#@markdown El uso de un modelo en diffusers utiliza menos recursos. Las 3 opciones anteriores funcionarán con o sin diffusers.\n",
         "load_diffusers = True #@param {type:\"boolean\"}\n",
@@ -122,6 +122,16 @@
         "  else:\n",
         "    model_url = \"https://civitai.com/api/download/models/293564\"\n",
         "  model_file = \"/content/animagineXLV3.safetensors\"\n",
+        "elif \"Illustrious\" in training_model:\n",
+        "  if load_diffusers:\n",
+        "    model_url = \"https://huggingface.co/OnomaAIResearch/Illustrious-xl-early-release-v0\"\n",
+        "  else:\n",
+        "    model_url = \"https://huggingface.co/OnomaAIResearch/Illustrious-xl-early-release-v0/resolve/main/Illustrious-XL-v0.1.safetensors\"\n",
+        "elif \"NoobAI-XL\" in training_model:\n",
+        "  if load_diffusers:\n",
+        "    model_url = \"https://huggingface.co/WhiteAiZ/NoobAI-XL_NAI-XL_Diffusers\"\n",
+        "  else:\n",
+        "    model_url = \"https://huggingface.co/advokat/noobaiXLNAIXL_epsilonPred075/resolve/main/noobaiXLNAIXL_epsilonPred075.safetensors\"\n",
         "else:\n",
         "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/\"\n",
