--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -132,7 +132,7 @@
         "    model_url = \"https://huggingface.co/WhiteAiZ/noobaiXLNAIXL_epsilonPred075_diffusers\"\n",
         "  else:\n",
         "    model_url = \"https://huggingface.co/advokat/noobaiXLNAIXL_epsilonPred075/resolve/main/noobaiXLNAIXL_epsilonPred075.safetensors\"\n",
-        "lif \"NoobAI-XL1.0\" in training_model:\n",
+        "elif \"NoobAI-XL1.0\" in training_model:\n",
         "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/WhiteAiZ/NoobAI-XLEPS1.0_DIffusers\"\n",
         "  else:\n",
