Added cell to convert images

--- a/Waifu_Diffusion_V3_Dataser_Maker.ipynb
+++ b/Waifu_Diffusion_V3_Dataser_Maker.ipynb
@@ -188,8 +188,120 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "Jz2emq6vWnPu"
+      },
+      "outputs": [],
       "source": [
-        "#@markdown ### **Tag your images**\n",
+        "# @title ## **3. Data Cleaning 🔨**\n",
+        "# @markdown #### Delete Unnecessary Files\n",
+        "import os\n",
+        "import random\n",
+        "import concurrent.futures\n",
+        "from tqdm import tqdm\n",
+        "from PIL import Image\n",
+        "\n",
+        "%store -r\n",
+        "\n",
+        "os.chdir(root_dir)\n",
+        "\n",
+        "test = os.listdir(train_data_dir)\n",
+        "# @markdown This section will delete unnecessary files and unsupported media such as `.mp4`, `.webm`, and `.gif`. These files are not used and may cause errors when training your lora.\n",
+        "\n",
+        "supported_types = [\n",
+        "    \".png\",\n",
+        "    \".jpg\",\n",
+        "    \".jpeg\",\n",
+        "    \".webp\",\n",
+        "    \".bmp\",\n",
+        "    \".caption\",\n",
+        "    \".npz\",\n",
+        "    \".txt\",\n",
+        "    \".json\",\n",
+        "]\n",
+        "\n",
+        "for item in test:\n",
+        "    file_ext = os.path.splitext(item)[1]\n",
+        "    if file_ext not in supported_types:\n",
+        "        print(f\"Deleting file {item} from {train_data_dir}\")\n",
+        "        os.remove(os.path.join(train_data_dir, item))\n",
+        "\n",
+        "# @markdown #### <br> Convert Transparent Images\n",
+        "# @markdown This code will convert your transparent dataset with alpha channel (RGBA) to RGB and give it a white background.\n",
+        "\n",
+        "convert = True  # @param {type:\"boolean\"}\n",
+        "random_color = False  # @param {type:\"boolean\"}\n",
+        "\n",
+        "batch_size = 32\n",
+        "\n",
+        "images = [\n",
+        "    image\n",
+        "    for image in os.listdir(train_data_dir)\n",
+        "    if image.endswith(\".png\") or image.endswith(\".webp\")\n",
+        "]\n",
+        "background_colors = [\n",
+        "    (255, 255, 255),\n",
+        "    (0, 0, 0),\n",
+        "    (255, 0, 0),\n",
+        "    (0, 255, 0),\n",
+        "    (0, 0, 255),\n",
+        "    (255, 255, 0),\n",
+        "    (255, 0, 255),\n",
+        "    (0, 255, 255),\n",
+        "]\n",
+        "\n",
+        "\n",
+        "def process_image(image_name):\n",
+        "    img = Image.open(f\"{train_data_dir}/{image_name}\")\n",
+        "\n",
+        "    if img.mode in (\"RGBA\", \"LA\"):\n",
+        "        if random_color:\n",
+        "            background_color = random.choice(background_colors)\n",
+        "        else:\n",
+        "            background_color = (255, 255, 255)\n",
+        "        bg = Image.new(\"RGB\", img.size, background_color)\n",
+        "        bg.paste(img, mask=img.split()[-1])\n",
+        "\n",
+        "        if image_name.endswith(\".webp\"):\n",
+        "            bg = bg.convert(\"RGB\")\n",
+        "            bg.save(f'{train_data_dir}/{image_name.replace(\".webp\", \".jpg\")}', \"JPEG\")\n",
+        "            os.remove(f\"{train_data_dir}/{image_name}\")\n",
+        "            print(\n",
+        "                f\" Converted image: {image_name} to {image_name.replace('.webp', '.jpg')}\"\n",
+        "            )\n",
+        "        else:\n",
+        "            bg.save(f\"{train_data_dir}/{image_name}\", \"PNG\")\n",
+        "            print(f\" Converted image: {image_name}\")\n",
+        "    else:\n",
+        "        if image_name.endswith(\".webp\"):\n",
+        "            img.save(f'{train_data_dir}/{image_name.replace(\".webp\", \".jpg\")}', \"JPEG\")\n",
+        "            os.remove(f\"{train_data_dir}/{image_name}\")\n",
+        "            print(\n",
+        "                f\" Converted image: {image_name} to {image_name.replace('.webp', '.jpg')}\"\n",
+        "            )\n",
+        "        else:\n",
+        "            img.save(f\"{train_data_dir}/{image_name}\", \"PNG\")\n",
+        "\n",
+        "\n",
+        "num_batches = len(images) // batch_size + 1\n",
+        "\n",
+        "if convert:\n",
+        "    with concurrent.futures.ThreadPoolExecutor() as executor:\n",
+        "        for i in tqdm(range(num_batches)):\n",
+        "            start = i * batch_size\n",
+        "            end = start + batch_size\n",
+        "            batch = images[start:end]\n",
+        "            executor.map(process_image, batch)\n",
+        "\n",
+        "    print(\"\\033[96mAll images have been converted\\033[0m\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@markdown ### **4. Tag your images**\n",
         "#@markdown ##### **Waifu Diffusion 1.4 Tagger V3**\n",
         "%store -r\n",
         "from IPython.display import clear_output\n",
@@ -252,7 +364,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title ### **3 Custom Caption/Tag** 📑\n",
+        "# @title ### **5. Custom Caption/Tag** 📑\n",
         "import os\n",
         "\n",
         "%store -r\n",
@@ -346,7 +458,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown ### Analyze Tags 📝\n",
+        "#@markdown ### **6. Analyze Tags 📝**\n",
         "#@markdown Perhaps you need another look at your dataset.\n",
         "#@markdown **You can see the tags of various folders like this:** `my_lora/dataset/subfolder`\n",
         "from collections import Counter\n",
@@ -386,7 +498,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown ### 📂 Unzip dataset\n",
+        "#@markdown ### **7. 📂 Unzip dataset**\n",
         "#@markdown It's much slower to upload individual files to your Drive, so you may want to upload a zip if you have your dataset in your computer.\n",
         "zip = \"/content/drive/MyDrive/Loras/example.zip\" #@param {type:\"string\"}\n",
         "extract_to = \"/content/drive/MyDrive/Loras/example/dataset\" #@param {type:\"string\"}\n",
@@ -415,7 +527,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown ### 🔢 Count datasets\n",
+        "#@markdown ### **8. 🔢 Count datasets**\n",
         "#@markdown Google Drive makes it impossible to count the files in a folder, so this will show you the file counts in all folders and subfolders.\n",
         "folder = \"/content/drive/MyDrive/Loras/example/dataset\" #@param {type:\"string\"}\n",
         "\n",
