--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -61,7 +61,6 @@
         "import re\n",
         "import toml\n",
         "from time import time\n",
-        "from huggingface_hub import HfFileSystem\n",
         "from IPython.display import Markdown, display\n",
         "\n",
         "# These carry information from past executions\n",
@@ -316,7 +315,7 @@
         "  !pip install torch==2.5.1+cu121 accelerate==0.19.0 transformers==4.30.2 diffusers==0.18.2 \\\n",
         "    bitsandbytes==0.40.0.post4 opencv-python jax==0.4.23 jaxlib==0.4.23 \\\n",
         "    pytorch-lightning==1.9.0 voluptuous==0.13.1 toml==0.10.2 ftfy==6.1.1 einops==0.6.0 \\\n",
-        "    safetensors pygments huggingface-hub wandb invisible-watermark==0.2.0 open-clip-torch==2.20.0 \\\n",
+        "    safetensors pygments huggingface-hub==0.22.0 wandb invisible-watermark==0.2.0 open-clip-torch==2.20.0 \\\n",
         "    dadaptation==3.1 prodigyopt==1.0 lion-pytorch==0.1.2\n",
         "  !pip install -e .\n",
         "  if cross_attention == \"xformers\":\n",
@@ -569,6 +568,7 @@
         "              username = match.group(1)\n",
         "              model_name = match.group(2)\n",
         "              model_file = f\"{username}/{model_name}\"\n",
+        "              from huggingface_hub import HfFileSystem\n",
         "              fs = HfFileSystem()\n",
         "              existing_folders = set(fs.ls(model_file, detail=False))\n",
         "              necessary_folders = [ \"scheduler\", \"text_encoder\", \"text_encoder_2\", \"tokenizer\", \"tokenizer_2\", \"unet\", \"vae\" ]\n",
@@ -667,25 +667,6 @@
         "\n",
         "  print(\"\\n⭐ Starting trainer...\\n\")\n",
         "  os.chdir(repo_dir)\n",
-        "\n",
-        "  # Patch diffusers to remove the cache_dir argument\n",
-        "  with open('/usr/local/lib/python3.10/dist-packages/diffusers/utils/dynamic_modules_utils.py', 'r') as file:\n",
-        "    content = file.read().replace('cached_download, ', '').replace('                    cache_dir=cache_dir,', '').replace('''try:\n",
-        "            resolved_module_file = cached_download(\n",
-        "                github_url,\n",
-        "                cache_dir=cache_dir,\n",
-        "                force_download=force_download,\n",
-        "                proxies=proxies,\n",
-        "                resume_download=resume_download,\n",
-        "                local_files_only=local_files_only,\n",
-        "                use_auth_token=False,\n",
-        "            )\n",
-        "            submodule = \"git\"\n",
-        "            module_file = pretrained_model_name_or_path + \".py\"\n",
-        "        except EnvironmentError:\n",
-        "            logger.error(f\"Could not locate the {module_file} inside {pretrained_model_name_or_path}.\")\n",
-        "            raise''', '')\n",
-        "  with open('/usr/local/lib/python3.10/dist-packages/diffusers/utils/dynamic_modules_utils.py', 'w') as file: file.write(content)\n",
         "\n",
         "  !accelerate launch --quiet --config_file={accelerate_config_file} --num_cpu_threads_per_process=1 train_network_xl_wrapper.py --dataset_config={dataset_config_file} --config_file={config_file}\n",
         "\n",
