change from noobai 1.0 to 0.5

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -100,7 +100,7 @@
         "#@markdown La estructura de carpetas no importa y es puramente por comodidad. Asegúrate de elegir siempre el mismo.  Me gusta organizar por proyecto.\n",
         "folder_structure = \"Organize by project (MyDrive/Loras/project_name/dataset)\" #@param [\"Organize by category (MyDrive/lora_training/datasets/project_name)\", \"Organize by project (MyDrive/Loras/project_name/dataset)\"]\n",
         "#@markdown Decida el modelo que se descargará y utilizará para el entrenamiento. También puedes elegir tu propio modelo pegando su enlace de descarga o un archivo en tu Google Drive que comience con `/content/drive/MyDrive`.\n",
-        "training_model = \"Pony Diffusion V6 XL\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\", \"Illustrious\", \"NoobAI-XL0.75\", \"NoobAI-XL1.0\", \"Stable Diffusion XL 1.0 base\",\"Pony_Realism\"]\n",
+        "training_model = \"Pony Diffusion V6 XL\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"Illustrious\",\"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\",\"Pony_Realism\"]\n",
         "optional_custom_training_model_url = \"\" #@param {type:\"string\"}\n",
         "#@markdown El uso de un modelo en diffusers utiliza menos recursos. Las 3 opciones anteriores funcionarán con o sin diffusers.\n",
         "load_diffusers = True #@param {type:\"boolean\"}\n",
@@ -131,11 +131,11 @@
         "    model_url = \"https://huggingface.co/WhiteAiZ/noobaiXLNAIXL_epsilonPred075_diffusers\"\n",
         "  else:\n",
         "    model_url = \"https://huggingface.co/advokat/noobaiXLNAIXL_epsilonPred075/resolve/main/noobaiXLNAIXL_epsilonPred075.safetensors\"\n",
-        "elif \"NoobAI-XL1.0\" in training_model:\n",
+        "elif \"NoobAI-XL0.5\" in training_model:\n",
         "  if load_diffusers:\n",
-        "    model_url = \"https://huggingface.co/WhiteAiZ/NoobAI-XLEPS1.0_DIffusers\"\n",
+        "    model_url = \"https://huggingface.co/anon4ik/noobaiXLNAIXL_epsilonPred05Version\"\n",
         "  else:\n",
-        "    model_url = \"https://huggingface.co/WhiteAiZ/NoobAI-XL_EPS_1.0/resolve/main/noobaiXLNAIXL_epsilonPred10Version.safetensors\"\n",
+        "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-0.5/resolve/main/NoobAI-XL-v0.5.safetensors\"\n",
         "else:\n",
         "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/\"\n",
@@ -156,7 +156,7 @@
         "\n",
         "\n",
         "#@markdown ### ▶️ Processing\n",
-        "#@markdown Por defecto la resolución para personajes es 1024, para estilos tambien puedes usar 768 o dejarlo en 1024.\n",
+        "#@markdown Por defecto la resolución para personajes es 1024. otras resoluciones que puedes usar son 896 (recomendado para personajes o 1024) y 768 (recomendado para estilos, puedes usar más repeticiones con esta resolución).\n",
         "resolution = 1024 #@param {type:\"number\", min:768, max:1536, step:128}\n",
         "#@markdown Activa `Flip Aug`si tu dataset es pequeño, util en personajes isometricos, volteara todas tus imagenes (modo espejo) para aprender el doble, pero podria afectar a personajes con tatuajes, marcas, cicatrices etc...\n",
         "flip_aug = False #@param {type:\"boolean\"}\n",
@@ -208,7 +208,8 @@
         "\n",
         "#@markdown | type | network_dim | network_alpha | conv_dim | conv_alpha |\n",
         "#@markdown | :---: | :---: | :---: | :---: | :---: |\n",
-        "#@markdown | Regular LoRA | 8 | 4 |   |   |\n",
+        "#@markdown | Personaje LoRA | 4 | 16 |   |   |\n",
+        "#@markdown | Regular y Estilo LoRA | 8 | 4 |   |   |\n",
         "#@markdown | Style LoCon | 16 | 8 | 16 | 8 |\n",
         "\n",
         "#@markdown Más dim significa un Lora más grande, puede contener más información, pero más no siempre es mejor.\n",
