--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -128,12 +128,12 @@
         "    model_url = \"https://huggingface.co/OnomaAIResearch/Illustrious-xl-early-release-v0/resolve/main/Illustrious-XL-v0.1.safetensors\"\n",
         "elif \"NoobAI-XL0.75\" in training_model:\n",
         "  if load_diffusers:\n",
-        "    model_url = \"https://huggingface.co/WhiteAiZ/noobaiXLNAIXL_epsilonPred075_diffusers\"\n",
+        "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-0.75\"\n",
         "  else:\n",
-        "    model_url = \"https://huggingface.co/advokat/noobaiXLNAIXL_epsilonPred075/resolve/main/noobaiXLNAIXL_epsilonPred075.safetensors\"\n",
+        "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-0.75/resolve/main/NoobAI-XL-v0.75.safetensors\"\n",
         "elif \"NoobAI-XL0.5\" in training_model:\n",
         "  if load_diffusers:\n",
-        "    model_url = \"https://huggingface.co/anon4ik/noobaiXLNAIXL_epsilonPred05Version\"\n",
+        "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-0.5\"\n",
         "  else:\n",
         "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-0.5/resolve/main/NoobAI-XL-v0.5.safetensors\"\n",
         "else:\n",
